# rust-experiments

./: Cargo.toml
src/: cargo-toml.rs  iterator.rs  prime.rs  range.rs  seq.rs
src/sequence/: mod.rs
