[package]
name = "rust-experiments"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]

[[bin]]
name = "range"
path = "src/range.rs"

[[bin]]
name = "iterator"
path = "src/iterator.rs"

[[bin]]
name = "prime"
path = "src/prime.rs"

[[bin]]
name = "seq"
path = "src/seq.rs"

[[bin]]
name = "cargo-toml"
path = "src/cargo-toml.rs"

[dependencies]
serde = "0.9"
serde_derive = "0.9"
toml = "0.3"
